fixes in docs
